[package]
authors = ["Dom Rodriguez (shymega) <shymega@shymega.org.uk>"]
categories = ["ssh", "ssh-agent", "ssh-keys"]
description = "Dynamic multi-backend OpenSSH agent for secure on-demand key management, written in Rust."
edition = "2021"
homepage = "https://github.com/shymega/Inuus"
keywords = ["bitwarden", "ssh-agent", "ssh-keys", "1password", "cryptographic", "pass", "security"]
license = "GPL-3.0-or-later"
name = "inuus"
publish = false
readme = "/README.md"
repository = "https://github.com/shymega/Inuus.git"
version = "0.1.0"

[lib]
name = "inuus"
path = "src/lib.rs"

[[bin]]
name = "inud"

[features]
default = []
bitwarden = ["rbw"]
_1password = []
pass = []

[dependencies]
anyhow = "1.0.71"
clap = "4.3.12"
dirs = "5.0.1"
env_logger = "0.10.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
log = "0.4.19"
rbw = { version = "1.7.1", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
ssh-agent-lib = "0.2.5"
ssh-key = { version = "0.5.1", features = ["ed25519", "serde", "signature"] }
thiserror = "1.0.43"
tokio = { version = "1.28.2", features = ["full"] }
twelf = { version = "0.12.0", features = ["env", "yaml"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
