# SPDX-FileCopyrightText: 2022-2026 The Inuus Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors = ["Dom Rodriguez (shymega) <shymega@shymega.org.uk>"]
categories = ["ssh", "ssh-agent", "ssh-keys"]
description = "Dynamic multi-backend OpenSSH agent for secure on-demand key management, written in Rust."
edition = "2021"
homepage = "https://github.com/shymega/Inuus"
keywords = ["bitwarden", "ssh-agent", "ssh-keys", "1password", "cryptographic", "pass", "security"]
license = "GPL-3.0-or-later"
name = "inuus"
publish = false
readme = "/README.md"
repository = "https://github.com/shymega/Inuus.git"
version = "0.1.0"

[lib]
name = "inuus"
path = "src/lib.rs"

[[bin]]
name = "inud"

[features]
default = ["pass", "bitwarden", "_1password"]
bitwarden = ["rbw"]
_1password = []
pass = []

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["string", "color" ] }
dirs = "5.0.1"
env_logger = "0.10.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
log = "0.4.20"
rbw = { version = "1.8.3", optional = true }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
ssh-agent-lib = "0.2.5"
ssh-key = { version = "0.6.1", features = ["ecdsa", "ed25519", "serde"] }
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["full"] }
twelf = { version = "0.12.0", features = ["env", "yaml"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
